- Added check to see if Property exists before calling Clear method. - Added ability to set a single property, or a list of Properties.

--- a/Syanpse.Services.ActiveDirectoryApi/Plans/CreateOrgUnit.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/CreateOrgUnit.yaml
@@ -9,7 +9,7 @@ Actions:
       Type: Yaml
       Values:
         LdapRoot: LDAP://DC=sandbox,DC=local
-        Action: Create
+        Action: Modify
         RunSequential: false
         QueryGroupMembership: true
         OutputType: Json
