- Standardized config variables across all Api plans. - Added SerializationType into CallPlan method.

--- a/Syanpse.Services.ActiveDirectoryApi/Plans/CreateGroup.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/CreateGroup.yaml
@@ -10,20 +10,20 @@ Actions:
       Values:
         Action: Create
         RunSequential: false
-        QueryGroupMembership: true
+        QueryGroupMembership: false
         OutputType: Json
         PrettyPrint: false
         ReturnObjects: true
         UseUpsert: true
         SuppressOutput: false
       Dynamic:
-      - Name: showgroups
+      - Name: querygroupmembership
         Path: QueryGroupMembership
-      - Name: formattype
-        Path: OutputType
-      - Name: prettyprint
-        Path: PrettyPrint
-      - Name: returnobject
+#      - Name: outputtype
+#        Path: OutputType
+#      - Name: prettyprint
+#        Path: PrettyPrint
+      - Name: returnobjects
         Path: ReturnObjects
   Parameters:
     Type: Yaml
