--- a/Syanpse.Services.ActiveDirectoryApi/Plans/RemoveGroupFromGroup.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/RemoveGroupFromGroup.yaml
@@ -10,19 +10,19 @@ Actions:
       Values:
         Action: RemoveFromGroup
         RunSequential: false
-        QueryGroupMembership: true
+        QueryGroupMembership: false
         OutputType: Json
         PrettyPrint: false
         ReturnObjects: true
         SuppressOutput: false
       Dynamic:
-      - Name: showgroups
+      - Name: querygroupmembership
         Path: QueryGroupMembership
-      - Name: formattype
-        Path: OutputType
-      - Name: prettyprint
-        Path: PrettyPrint
-      - Name: returnobject
+#      - Name: outputtype
+#        Path: OutputType
+#      - Name: prettyprint
+#        Path: PrettyPrint
+      - Name: returnobjects
         Path: ReturnObjects
   Parameters:
     Type: Yaml
