--- a/Syanpse.Services.ActiveDirectoryApi/Plans/DeleteUser.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/DeleteUser.yaml
@@ -13,16 +13,16 @@ Actions:
         QueryGroupMembership: false
         OutputType: Json
         PrettyPrint: false
-        ReturnObjects: false
+        ReturnObjects: true
         SuppressOutput: false
       Dynamic:
-      - Name: showgroups
+      - Name: querygroupmembership
         Path: QueryGroupMembership
-      - Name: formattype
-        Path: OutputType
-      - Name: prettyprint
-        Path: PrettyPrint
-      - Name: returnobject
+#      - Name: outputtype
+#        Path: OutputType
+#      - Name: prettyprint
+#        Path: PrettyPrint
+      - Name: returnobjects
         Path: ReturnObjects
   Parameters:
     Type: Yaml
