--- a/Synapse.ActiveDirectory.Sandbox/Synapse.ActiveDirectory.Sandbox.csproj
+++ b/Synapse.ActiveDirectory.Sandbox/Synapse.ActiveDirectory.Sandbox.csproj
@@ -1,18 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E27A474D-C3CC-4DD6-A9B4-5D815EA14AA0}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Synapse.ActiveDirectory.Core</RootNamespace>
-    <AssemblyName>Synapse.ActiveDirectory.Core</AssemblyName>
+    <ProjectGuid>{7EC12477-D6BB-42B6-A2FD-92731C59BA4A}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>Synapse.ActiveDirectory.Sandbox</RootNamespace>
+    <AssemblyName>Synapse.ActiveDirectory.Sandbox</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,47 +32,44 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Synapse.Core, Version=0.1.0.0, Culture=neutral, PublicKeyToken=a6de1cc56b73f982, processorArchitecture=MSIL">
+      <HintPath>..\packages\Synapse.Core.Signed.0.1.17218.0-beta\lib\net45\Synapse.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.DirectoryServices.AccountManagement" />
-    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="YamlDotNet, Version=4.0.0.0, Culture=neutral, PublicKeyToken=ec19458f3c15af5e, processorArchitecture=MSIL">
+      <HintPath>..\packages\YamlDotNet.Signed.4.0.0\lib\net35\YamlDotNet.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\AccessRuleObject.cs" />
-    <Compile Include="Classes\AdException.cs" />
-    <Compile Include="Classes\DirectoryEntryObject.cs" />
-    <Compile Include="Classes\OrganizationalUnitObject.cs" />
-    <Compile Include="Classes\GroupPrincipalObject.cs" />
-    <Compile Include="Classes\PrincipalObject.cs" />
-    <Compile Include="Classes\SerializableDictionary.cs" />
-    <Compile Include="Classes\UserPrincipalObject.cs" />
-    <Compile Include="Runtime\Group.cs" />
-    <Compile Include="Runtime\OrgUnit.cs" />
-    <Compile Include="Runtime\User.cs" />
-    <Compile Include="Runtime\DirectoryServices.cs" />
-    <Compile Include="Classes\Enums.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Classes\SecurityPrincipalObject.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Syanpse.Services.ActiveDirectoryApi\Synapse.Services.ActiveDirectoryApi.csproj">
+      <Project>{e35e65f1-a918-47f9-b7e7-dd1e950e7c11}</Project>
+      <Name>Synapse.Services.ActiveDirectoryApi</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Synapse.ActiveDirectory.Core\Synapse.ActiveDirectory.Core.csproj">
+      <Project>{e27a474d-c3cc-4dd6-a9b4-5d815ea14aa0}</Project>
+      <Name>Synapse.ActiveDirectory.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Synapse.Handlers.ActiveDirectory\Synapse.Handlers.ActiveDirectory.csproj">
+      <Project>{b1468ed1-cdb3-473b-b8e9-50808cf1e948}</Project>
+      <Name>Synapse.Handlers.ActiveDirectory</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>powershell.exe -ExecutionPolicy Bypass -NoProfile -NonInteractive -File $(SolutionDir)scripts\setVersion.ps1 -path $(ProjectDir)Properties\AssemblyInfo.cs -versionFile $(SolutionDir)scripts\AssemblyInfo.xml</PreBuildEvent>
-  </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
