--- a/Syanpse.Services.ActiveDirectoryApi/Plans/AddAccessRuleToUser.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/AddAccessRuleToUser.yaml
@@ -1,17 +1,20 @@
-Name: DeleteGroupApi
-Description: Delete Ldap Group
+Name: AddAccessRuleToUserApi
+Description: Add Access Rule To A User
 IsActive: true
 Actions:
-- Name: DeleteGroup
+- Name: AddAccessRuleToUser
   Handler:
     Type: Synapse.Handlers.ActiveDirectory:ActiveDirectoryHandler
     Config:
       Type: Yaml
       Values:
-        Action: Delete
+        Action: AddAccessRule
         RunSequential: false
+        QueryGroupMembership: false
         OutputType: Json
         PrettyPrint: false
+        ReturnObjects: true
+        ReturnAccessRules: false
         SuppressOutput: false
       Dynamic:
       - Name: querygroupmembership
@@ -23,8 +26,18 @@ Actions:
   Parameters:
     Type: Yaml
     Values:
-      Groups:
+      Users:
       - Identity: 
+        AccessRules:
+        - Identity: 
+          Type: 
+          Rights:
     Dynamic:
     - Name: identity
-      Path: Groups[0]:Identity
+      Path: Users[0]:Identity
+    - Name: ruleidentity
+      Path: Users[0]:AccessRules[0]:Identity
+    - Name: ruletype
+      Path: Users[0]:AccessRules[0]:Type
+    - Name: rulerights
+      Path: Users[0]:AccessRules[0]:Rights
