--- a/Syanpse.Services.ActiveDirectoryApi/Plans/ModifyUser.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/ModifyUser.yaml
@@ -14,6 +14,7 @@ Actions:
         OutputType: Json
         PrettyPrint: false
         ReturnObjects: true
+        ReturnAccessRules: false
         UseUpsert: true
         SuppressOutput: false
       Dynamic:
@@ -21,6 +22,8 @@ Actions:
         Path: QueryGroupMembership
       - Name: returnobjects
         Path: ReturnObjects
+      - Name: returnaccessrules
+        Path: ReturnAccessRules
   Parameters:
     Type: Yaml
     Values:
