--- a/Syanpse.Services.ActiveDirectoryApi/Plans/PurgeAccessRulesOnOrgUnit.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/PurgeAccessRulesOnOrgUnit.yaml
@@ -1,17 +1,20 @@
-Name: DeleteGroupApi
-Description: Delete Ldap Group
+Name: PurgeAccessRulesOnOrgUnitApi
+Description: Purge Access Rules On A Organizational Unit
 IsActive: true
 Actions:
-- Name: DeleteGroup
+- Name: PurgeAccessRulesOnOrgUnit
   Handler:
     Type: Synapse.Handlers.ActiveDirectory:ActiveDirectoryHandler
     Config:
       Type: Yaml
       Values:
-        Action: Delete
+        Action: PurgeAccessRules
         RunSequential: false
+        QueryGroupMembership: false
         OutputType: Json
         PrettyPrint: false
+        ReturnObjects: true
+        ReturnAccessRules: false
         SuppressOutput: false
       Dynamic:
       - Name: querygroupmembership
@@ -23,8 +26,12 @@ Actions:
   Parameters:
     Type: Yaml
     Values:
-      Groups:
+      OrganizationalUnits:
       - Identity: 
+        AccessRules:
+        - Identity: 
     Dynamic:
     - Name: identity
-      Path: Groups[0]:Identity
+      Path: OrganizationalUnits[0]:Identity
+    - Name: ruleidentity
+      Path: OrganizationalUnits[0]:AccessRules[0]:Identity
