--- a/Syanpse.Services.ActiveDirectoryApi/Plans/RemoveAccessRuleFromGroup.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/RemoveAccessRuleFromGroup.yaml
@@ -1,17 +1,20 @@
-Name: DeleteGroupApi
-Description: Delete Ldap Group
+Name: RemoveAccessRuleFromGroupApi
+Description: Remove Access Rule From Group
 IsActive: true
 Actions:
-- Name: DeleteGroup
+- Name: RemoveAccessRuleFromGroup
   Handler:
     Type: Synapse.Handlers.ActiveDirectory:ActiveDirectoryHandler
     Config:
       Type: Yaml
       Values:
-        Action: Delete
+        Action: RemoveAccessRule
         RunSequential: false
+        QueryGroupMembership: false
         OutputType: Json
         PrettyPrint: false
+        ReturnObjects: true
+        ReturnAccessRules: false
         SuppressOutput: false
       Dynamic:
       - Name: querygroupmembership
@@ -25,6 +28,16 @@ Actions:
     Values:
       Groups:
       - Identity: 
+        AccessRules:
+        - Identity: 
+          Type: 
+          Rights:
     Dynamic:
     - Name: identity
       Path: Groups[0]:Identity
+    - Name: ruleidentity
+      Path: Groups[0]:AccessRules[0]:Identity
+    - Name: ruletype
+      Path: Groups[0]:AccessRules[0]:Type
+    - Name: rulerights
+      Path: Groups[0]:AccessRules[0]:Rights
