--- a/Syanpse.Services.ActiveDirectoryApi/Plans/DeleteOrgUnit.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/DeleteOrgUnit.yaml
@@ -18,6 +18,8 @@ Actions:
         Path: QueryGroupMembership
       - Name: returnobjects
         Path: ReturnObjects
+      - Name: returnobjectproperties
+        Path: ReturnObjectProperties
       - Name: returnaccessrules
         Path: ReturnAccessRules
   Parameters:
