--- a/Syanpse.Services.ActiveDirectoryApi/Plans/PurgeAccessRulesOnUser.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/PurgeAccessRulesOnUser.yaml
@@ -14,6 +14,7 @@ Actions:
         OutputType: Json
         PrettyPrint: false
         ReturnObjects: true
+        ReturnObjectProperties: true
         ReturnAccessRules: false
         SuppressOutput: false
       Dynamic:
@@ -21,6 +22,8 @@ Actions:
         Path: QueryGroupMembership
       - Name: returnobjects
         Path: ReturnObjects
+      - Name: returnobjectproperties
+        Path: ReturnObjectProperties
       - Name: returnaccessrules
         Path: ReturnAccessRules
   Parameters:
