- Updated to lastest Core to fix bugs with parameter substitution. - Fixed issue when "attributes" don't exist in Search, was pasing "null" instead of taking default from plan.

--- a/Syanpse.Services.ActiveDirectoryApi/Plans/GetAllGroups.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/GetAllGroups.yaml
@@ -24,6 +24,9 @@ Actions:
           ReplaceWith: xxxxxxxx
         ReturnAttributes: 
         - name
+        - displayName
+        - userPrincipalName
+        - sAMAccountName
         - objectGUID
         - objectSid
     Dynamic:
